force-app/main/default/objects/Book_Of_Business__c/Book_Of_Business__c.object-meta.xml
<CustomObject>
    <description>created for Project Alpha - GTMS-10594</description>
    <label>Account Book</label>
    <nameField>
        <label>Account Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Book</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>