force-app/main/default/objects/Book_Of_Business__c/fields/Account_Book_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Book_Status__c</fullName>
    <label>Account Book Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin hold</fullName>
                <default>true</default>
                <label>Admin hold</label>
            </value>
            <value>
                <fullName>Primary: In seat</fullName>
            </value>
            <value>
                <fullName>Secondary: LOA</fullName>
            </value>
            <value>
                <fullName>Secondary: Churn</fullName>
            </value>
            <value>
                <fullName>Secondary: Overcarve</fullName>
            </value>
            <value>
                <fullName>Secondary: AOP Hires</fullName>
            </value>
            <value>
                <fullName>Secondary: Hire Ahead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>