force-app/main/default/objects/Book_Of_Business__c/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Books_Of_Business3</relationshipName>
    <type>Lookup</type>
</CustomField>