force-app/main/default/objects/Book_Of_Business__c/fields/ADR_LoA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ADR_LoA_Start_Date__c</fullName>
    <formula>ADR__r.LoA_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADR LoA Start Date</label>
    <type>Date</type>
</CustomField>