force-app/main/default/objects/Book_Of_Business__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Books_Of_Business2</relationshipName>
    <type>Lookup</type>
</CustomField>