force-app/main/default/objects/Book_Of_Business__c/validationRules/AE_Assignment_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AE_Assignment_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
				AE_Validation_Check__c,
				OR(
								ISCHANGED(AE__c),
								ISNEW()
								)
)</errorConditionFormula>
    <errorMessage>AE Cannot be assigned, as they have already been assigned to an existing Account Book,</errorMessage>
</ValidationRule>