force-app/main/default/objects/Book_Of_Business__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>AE__c</columns>
    <columns>AE_Territory__c</columns>
    <columns>POD_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>