force-app/main/default/objects/Book_Of_Business__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AE_Territory__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>POD_Name__c</columns>
    <columns>Sales_Ops_Account_Book_Notes__c</columns>
    <columns>AE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>